# PQC-Standards-Implementation

./: .gitignore  MANUAL.md  README.md  interop_results.json  interop_results.txt  interop_results_all.json  interop_results_all.txt
.github/workflows/: ci.yml
docs/plans/: 2026-03-26-pqc-standards-implementation-design.md  2026-04-01-fn-dsa-hqc-design.md
dotnet/InteropVerify/: InteropVerify.csproj  Program.cs
go/: go.mod
go/benchmarks/: bench_test.go
go/composite/: composite_sig.go  composite_sig_test.go
go/hybrid/: hybrid_kem.go
go/mldsa/: dsa.go
go/mlkem/: kat_test.go  kem.go  kem_test.go  kpke.go
go/pqctls/: cipher_suites.go  named_groups.go  pqctls_test.go  sig_algorithms.go
go/slhdsa/: slhdsa.go
interop/: README.md  generate_all_results.py  generate_all_vectors.go  generate_vectors.py  interop_generate.py  interop_verify_go.go  interop_verify_js.mjs  interop_verify_php.php  run_interop.sh  run_interop_comprehensive.sh  verify_go.go  verify_java.java  verify_js.mjs  verify_python.py  verify_rust.rs
interop/vectors/: ml-dsa-44.json  ml-dsa-65.json  ml-dsa-87.json  ml-kem-1024.json  ml-kem-512.json  ml-kem-768.json  slh-dsa-shake-128f.json  slh-dsa-shake-128s.json  slh-dsa-shake-192f.json  slh-dsa-shake-192s.json  slh-dsa-shake-256f.json  slh-dsa-shake-256s.json
java/: pom.xml
js/: package.json
js/bench/: bench.mjs
js/src/: encode.js  field.js  hash.js  index.js  kem.js  kpke.js  ntt.js  params.js  sampling.js
js/test/: composite.test.js  hybrid.test.js  tls.test.js
php/: .phpunit.result.cache  composer.json  phpunit.xml
php/tests/: CompositeTest.php  HybridTest.php  MlDsaTest.php  MlKemTest.php  SlhDsaTest.php  TlsTest.php
python/benchmarks/: bench.py
python/mldsa/: __init__.py  decompose.py  dsa.py  encode.py  field.py  hash_funcs.py  ntt.py  params.py
python/mlkem/: compress.py  encode.py  hash_funcs.py  sampling.py
python/pqctls/: __init__.py  cipher_suites.py  named_groups.py  (+1 more)
rust/: Cargo.toml
rust/hybrid-kem/: Cargo.toml
rust/hybrid-kem/src/: hybrid_kem.rs  lib.rs
rust/interop-verify/: Cargo.toml
rust/interop-verify/src/: main.rs
rust/ml-dsa/: Cargo.toml
rust/ml-dsa/benches/: ml_dsa_bench.rs
rust/ml-dsa/src/: dsa.rs  encode.rs  field.rs  lib.rs  ntt.rs
rust/pqc-tls/: Cargo.toml
rust/pqc-tls/src/: cipher_suites.rs  lib.rs  named_groups.rs  sig_algorithms.rs
swift/: Package.swift
(+152 files in other folders)
