[package]
name = "hybrid-kem"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hybrid KEM combining classical ECDH with ML-KEM for post-quantum/classical security"
categories = ["cryptography"]
keywords = ["crypto", "post-quantum", "hybrid", "kem", "x25519"]

[dependencies]
ml-kem = { path = "../ml-kem" }
sha3 = { workspace = true }
digest = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }

[dev-dependencies]
rand = { workspace = true }
