[workspace]

[package]
name = "interop-verify"
version = "0.1.0"
edition = "2021"
description = "Cross-language PQC interoperability verifier"

[[bin]]
name = "interop-verify"
path = "src/main.rs"

[dependencies]
ml-kem  = { path = "../ml-kem",  features = ["alloc", "std"] }
ml-dsa  = { path = "../ml-dsa",  features = ["std"] }
slh-dsa = { path = "../slh-dsa", features = ["std"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hex          = { version = "0.4", features = ["serde"] }
